# madder

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.circleci/: config.yml
api-server/: Cargo.toml
api-server/src/: main.rs
app/: package.json
app/src/: background.ts  main.ts
app/src/plugins/: vuesax.js
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/docs/: docker-compose.yml  madder-api.yaml
core/src/: avi_renderer.rs  json_api.rs  json_patch.rs  lib.rs  serializer.rs
core/src/component/: attribute.rs  component.rs  effect.rs  image_component.rs  interface.rs  mod.rs  property.rs  sound_component.rs  text_component.rs  video_component.rs
core/src/feat/: mod.rs  repository_vec_impl.rs
core/src/feat/entity/: component_ext.rs  mod.rs  project_impl.rs
core/src/feat/entity/components/: image_component.rs  mod.rs  sound_component.rs  text_component.rs  video_component.rs
core/src/feat/repository/: component_repository_impl.rs  effect_repository_impl.rs  hashmap_impl.rs  mod.rs
core/src/feat/service/: mod.rs  pixbuf_service_impl.rs
core/src/spec/: editor.rs  mod.rs  repository.rs
core/src/spec/adapter/: api_server.rs  avi_renderer.rs  json_api.rs  loader.rs  mod.rs  presenter.rs
core/src/spec/entity/: component.rs  effect.rs  mod.rs  project.rs
core/src/spec/repository/: component_repository.rs  effect_repository.rs  mod.rs  repository.rs
core/src/spec/service/: mod.rs  pixbuf_service.rs
core/src/spec/usecase/: project_usecase.rs
core/src/util/: mod.rs  serde_impl.rs
core/src/widget/: ruler.rs  wrapper.rs
gui/: package.json
gui-electron/: .gitignore  README.md  electron.js  index.html  main.js  package-lock.json  package.json  renderer.js  tsconfig.json  webpack.config.js
gui-electron/css/: index.css
gui-electron/native/: Cargo.toml
gui-electron/native/src/: lib.rs
gui-electron/public/: index.html
gui-electron/src/: App.js  app.tsx  index.ejs  index.js  lib.js  lib.ts  renderer.ts  types.tsx
gui-electron/src/components/: App.js  App.jsx  component_detail.jsx  component_detail.tsx  new_component.jsx  ruler.jsx  screen.jsx  screen.tsx  timeline.jsx  timeline.tsx
gui-electron/src/main/: index.js
gui-electron/src/renderer/: App.vue  lib.js
gui-electron/src/renderer/components/: AddComponent.vue  ComponentDetail.vue  Screen.vue  Timeline.vue
gui-gtk-legacy/: Cargo.toml
gui-gtk-legacy/src/: app.rs  gtk_impl.rs  main.rs  ui_impl.rs
gui-gtk-legacy/src/widget/: bezier_graph.rs  box_viewer.rs  effect_viewer.rs
gui/src/main/: index.js
gui/src/renderer/: App.vue  main.js
gui/src/renderer/components/: AddComponent.vue  WriteOptions.vue
proto/: component.proto  effect.proto  project.proto
ql-server/: Cargo.toml
ql-server/src/: components.rs  editor.rs  lib.rs  main.rs  schema.rs  util.rs
ql-server/src/components/: video.rs  video_test.rs
ql-server/src/util/: custom_scalars.rs  pixbuf.rs
ql-server/tests/: schema.rs
src/: app.rs  core_wrapper.rs  gtk_impl.rs  lib.rs  main.rs  serializer.rs  ui_impl.rs
src/component/: image_component.rs  mod.rs  video_component.rs
src/widget/: bezier_graph.rs  box_viewer.rs  effect_viewer.rs  mod.rs  property_viewer.rs  ruler.rs  timeline.rs  wrapper.rs
util/: Cargo.toml
util/src/: gtk_util.rs  lib.rs  macros.rs  self_wrapper.rs  serde_impl.rs
