[package]
name = "madder"
version = "0.1.2"
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]

[dependencies]
madder-util = { path = "util", version = "0.1.2" }
madder-core = { path = "core", version = "0.1.2" }
gtk = { version = "0.4.0", features = ["v3_18"] }
gdk = { version = "0.8.0", features = ["v3_18"] }
gdk-pixbuf = "0.4.0"
gio = "0.4.0"
glib = "0.5.0"
cairo-rs = "0.4.1"
pango = "0.4.0"
pangocairo = "0.5.0"
gstreamer = "0.11.1"
gstreamer-video = "0.11.0"
gstreamer-app = "0.11.0"
serde_json = "1.0.9"
relm = "0.14.4"
relm-derive = "0.14.4"
relm-attributes = "0.14.4"

[features]
default = ["relm/unstable", "relm-attributes/unstable", "relm-derive/unstable"]

