[package]
name = "madder-core"
version = "0.1.3"
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]

[dependencies]
madder-util = { path = "../util", version = "0.1.2" }
gdk = "0.8.0"
gdk-pixbuf = "0.4.0"
glib = "0.5.0"
cairo-rs = { version = "0.4.1", features = ["png"] }
pango = "0.4.0"
pangocairo = "0.5.0"
gstreamer = "0.11.1"
gstreamer-video = "0.11.0"
gstreamer-app = "0.11.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
serde_yaml = "0.7.5"
route-recognizer = "0.1.12"
maplit = "1.0.1"
uuid = { version = "0.6", features = ["v4"] }
