[package]
name = "madder-core"
version = "0.1.3"
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]

[dependencies]
gdk = "0.9.0"
gdk-pixbuf = "0.5.0"
glib = "0.6.0"
cairo-rs = { version = "0.5.0", features = ["png"] }
pango = "0.5.0"
pangocairo = "0.6.0"
gstreamer = { version = "0.12.0", features = ["futures"] }
gstreamer-video = "0.12.0"
gstreamer-app = "0.12.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
serde_yaml = "0.7.5"
route-recognizer = "0.1.12"
maplit = "1.0.1"
uuid = { version = "0.6", features = ["v4"] }
base64 = "0.9.2"
bincode = "1.0.1"
bmp = "*"
macro-attr = "*"

