[package]
name = "gui-electron-neon"
version = "0.1.0"
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "gui_electron_neon"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
